2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): share the "New 1 Player" menu item
	between Maemo and GNOME

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): removed the glade_xml from the code

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the main window
	* src/ui/ui-main.c: (ui_main_new): don't use glade for the main window
	anymore

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: remove the old vbox (it's not used
	anymore)
	* src/ui/ui-main.c: (ui_main_new): don't replace the old vbox, just
	create the new one; don't load the glade UI for Maemo

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): replace the glade-generated vbox by
	a manually created one (for Maemo, too)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): replace the glade-generated vbox by
	a manually created one (for GNOME)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the menu bar from the glade file
	* src/ui/ui-main.c: (ui_main_new): don't hide the menubar anymore,
	it's gone (Maemo); don't destroy() the menubar anymore, it's gone (for
	GNOME)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item),
	(ui_main_game_changed): use a menu bar generated by GtkUIManager, not
	by glade

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the unused game menu

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item): use
	the generated menu

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): fix the last commit

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (game_pause_cb),
	(game_resume_cb), (pause_game): added callbacks for the new GtkActions
